--- a/css/tedxistalameda.css
+++ b/css/tedxistalameda.css
@@ -811,6 +811,7 @@ body input ~ div .textbox-title {
 	font-weight: 200;
 	margin: 10px 0;
 	color: #ff2100;
+	text-align: center;
 }
 
 body input ~ div .textbox-description {
@@ -819,7 +820,8 @@ body input ~ div .textbox-description {
 	margin: 10px 0;
 	color: #292929;
 	line-height: 25px;
-	text-align: center;
+	text-align: justify;
+    text-justify: distribute;
 }
 
 body input ~ div .textbox-description > a {
@@ -2323,18 +2325,10 @@ a > svg.flickr:hover {
 
 /* SOCIAL MEDIA FEED -------------- */
 .social-feed-container {
-	width: 300px;
-	height: 100%;
-	/*display: flex;
+	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	align-content: center;*/
-	columns: 0;
-	-moz-columns: 0;
-	-webkit-columns: 0;
-	column-gap: 5px;
- 	-moz-column-gap: 5px;
- 	-webkit-column-gap: 5px;
+	align-content: center;
 	/*max-height: 3000px;*/
 }
 
@@ -2345,14 +2339,11 @@ a > svg.flickr:hover {
     color: #333;
     text-align:left;
     font-size: 14px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 16px;
-	display: inline-block;
     margin: 10px 10px 25px 10px;
 	-webkit-transform: translateX(0);
 	-moz-transform: translateX(0);
 	transform: translateX(0);
-	width: 100%;
 }
 
 .social-feed-element:hover{
@@ -2361,45 +2352,33 @@ a > svg.flickr:hover {
 }
 
 .social-feed-element .top_news {
-	height: 80px;
 	padding: 15px 20px 15px 20px;
-	cursor:default;
 }
 
 .social-feed-element .media-object {
     display: block;
-    width: 50px;
 	float: left;
 	margin-right: 15px;
 }
 
 .social-feed-element .author-news {
-	font-size: 15px;
 	color: #292929;
 	font-weight: 500;
-	margin-top: 7px;
 }
 
 .social-feed-element .time-news {
-	font-size: 13px;
 	color: #E0E0E0;
 	font-weight: 500;
 	margin-top: 3px;
 }
 
 .social-feed-element .icon-feed {
-	margin-top: -35px;
-	height: 40px;
-	width: 40px;
 	color: #005580;
-	float: right;
 }
 
 .social-feed-element .attachment {
 	margin-top: 15px;
     vertical-align: middle;
-	width: 100%;
-	max-height: 400px;
 }
 
 .social-feed-element .content_news{
@@ -2482,13 +2461,6 @@ a > svg.flickr:hover {
 
 @media all and (min-width: 1100px) {
 	.social-feed-container {
-		columns: 2;
-		-moz-columns: 2;
-		-webkit-columns: 2;
-		column-gap: 35px;
- 		-moz-column-gap: 35px;
- 		-webkit-column-gap: 25px;
-		width: 942px;
 	}
 	.item_section_news {
 		width: 962px;
