--- a/css/team.css
+++ b/css/team.css
@@ -220,3 +220,104 @@
 	}	
 }
 /* ---------------------------------------- */
+.flex_container {
+    width: 90vw;
+    height: auto;
+    
+    padding: 0;
+    margin: 0 5vw 0 5vw;
+    list-style: none;
+    
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+  
+    -webkit-flex-flow: row wrap;
+    justify-content: center;
+}
+
+.flex_child {
+    margin: auto;
+    background-color: none;
+    width: 300px;
+    height: 300px;
+}
+
+.flex_child img{
+    width: 100%; 
+    border-bottom: 5px solid #ff2100;
+    
+}
+
+/* Resizing the grid ---------------------- *//*
+@media all and (min-height: 900px) {
+	.flex_child img {
+		height: 200px!important;
+	}
+}
+@media all and (min-height: 800px) {
+
+	.flex_child {
+		margin-top: -18px;
+	}
+}
+*/
+@media all and (max-width: 1280px){
+	.flex_child{
+		/*width: 320px;*/
+	}
+
+/* Ipad pro + desktops */ 
+@media all and (max-width: 1090px){
+	.flex_child{
+		/*width: 200px;*/
+	}
+	
+}
+@media all and (max-width: 910px) {
+	.flex_child img{
+		
+	}
+}
+
+/* Ipad / Tablets */ /*
+@media all and (max-width: 785px) {
+	.flex_child{
+		width: 584px;
+		height: 590px;
+	}
+
+} */
+/* All phones */ /*
+@media all and (max-width: 470px) {
+	.flex_child{
+		width: 312px;
+		height: 990px;
+		padding-left: 3%;
+		margin-bottom: 180px!important;
+	}	
+	
+} 
+@media all and (max-width: 370px) {
+	.flex_child{
+		margin-bottom: 100px;
+	}	
+}
+*/
+.flex_title {
+    margin: auto;
+    background-color: none;
+    width: 300px;
+    height: 30px;
+    border-bottom: 2px solid #292929/*#e0e0e0*/;
+    margin-bottom: 10px;
+}
+    
+.flex_title h2{
+    font-size: 24px;
+    font-weight: 500;
+    font: Roboto;
+    color: #292929;
+}
