added hover, speaker photos, code needs some cleaning

--- a/css/team.css
+++ b/css/team.css
@@ -247,7 +247,7 @@
 
 .flex_child img{
     width: 100%; 
-    border-bottom: 5px solid #ff2100;
+    /*border-bottom: 5px solid #ff2100;*/
     
 }
 
