--- a/css/tedxistalameda.css
+++ b/css/tedxistalameda.css
@@ -391,14 +391,15 @@ li {
 html, body {
     margin: 0;
     padding: 0;
-    color: #FFF;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+	position: fixed;
+    overflow: auto;
 }
 
 body {
     background: #FFF;
+	-webkit-overflow-scrolling: touch;
 }
 
 html {
@@ -411,21 +412,19 @@ main {
   font-family: "Helvetica", Helvetica, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
   overflow-y: scroll; }
 
-
 /* NAVIGATION BAR ----------------- */
 .nav {
     position: fixed;
-    width: 100%;
-    height: 90px;
-    padding-top: 15px;
+    height: 85px;
+    padding-top: 9px;
     z-index: 5;
 	visibility: hidden;
-	background-color: rgba(255,255,255,0.8)
+	background-color: transparent;
+	margin: 5px 0 0 5px;
 }
 
 /* TEDxISTAlameda LOGO - svg */
 .nav_logo {
-    width: 100%;
     overflow: hidden;
     cursor: default !important; 
     text-align: center;
@@ -438,12 +437,9 @@ main {
     top: 0; left: 0;
 }
 .logo-container {
+	position: relative;
     width: 256px;
     margin: 0 auto;
-    /* this formula makes sure the aspect ratio of the container equals that of the svg graphic 
-    padding-top: (svg height / svg width) * width-value;*/
-    padding-top: 4%;
-    position: relative;
 }
 
 @media all and (max-width:640px){
@@ -457,7 +453,7 @@ body input + label {
   	position: absolute;
   	padding: 0;
 	width: 28px;
-	top: 27px;
+	top: 19px;
 	right: 30px;
 	z-index: 6;
 }
@@ -550,7 +546,7 @@ body label:hover {
 /* Close button from fullscreen / expandable view - svg */
 .nav_x {
     position: absolute;
-    top: -30px;
+    top: -43px;
     left: 30px!important;
     width: 26px;
     height: 26px;
@@ -695,24 +691,25 @@ body label:hover {
 
 /* CONTENT TEAM & ABOUT ----------- */
 body input ~ div {
-  background-color: rgba(255,255,255,0.8); /*#E0E0E0;*/
+  background-color: rgba(252,252,252,0.8); /*#E0E0E0;*/
   position: fixed;
   overflow-y: scroll;
-  top: 90px; bottom: 0; left: 0; right: 0;
-  width: 100%; height: 0%;
+  top: 90px; bottom: 5px; left: 0; right: 0;
+  height: 0%;
   transition: 0.5s ease-in-out 0.8s;
   -moz-transition: 0.5s ease-in-out 0.8s;
   -webkit-transition: 0.5s ease-in-out 0.8s;
 }
 
 body input:checked ~ div {
-	height: 100%;
-	/*border: 10px solid #FFF;*/
+	height: -moz-calc(100% - 90px);
+    height: -webkit-calc(100% - 90px);
+    height: -o-calc(100% - 90px);
+    height: calc(100% - 90px);
     transition: height 0.5s ease-in-out 0.2s;
     -moz-transition: height 0.5s ease-in-out 0.2s;
     -webkit-transition: height 0.5s ease-in-out 0.2s;
 }
-
 body input ~ div .new_section {
 	font-size: 20px;
     font-weight: 400;
@@ -897,7 +894,7 @@ body input:checked ~ div .footnote {
 }
 @media all and (max-width: 550px) {
 	body input ~ div .new_section {
-		margin-top: 3%;
+		margin-top: 3.5%;
 		font-size: 18px;
 	}
 	body input ~ div .footnote {
@@ -922,7 +919,7 @@ body input:checked ~ div .footnote {
 
 @media all and (min-width: 780px) {
     .menu-list {
-        bottom: 30px;
+        display: none!important;
     }
 }
 
@@ -971,9 +968,8 @@ body input:checked ~ div .footnote {
     height: 500px;
     position: absolute;
     z-index: 0;
-	box-shadow: 10px;
-	background-color: rgb(245,245,245);
-	/*border: 13px #000 solid;*/
+	background-color: rgb(252,252,252);
+	border: 5px #000 solid;
 }
 
 .list_bg {
@@ -1180,16 +1176,6 @@ body input:checked ~ div .footnote {
 		font-size: 61px;
 		margin-top: 5%;
 	}
-	#Contest .list_subtitle span:nth-child(1) {
-		width: 140px;
-	}
-	#Contest .list_subtitle span:nth-child(2) {
-		width: 290px;
-	}
-	#Contest .list_subtitle span:nth-child(3) {
-		width: 320px;
-	}
-    
     #Speakers .list_subtitle span:nth-child(1) {
 		width: 215px;
 	}
@@ -1264,7 +1250,7 @@ body input:checked ~ div .footnote {
 	display: none;
 	position: relative;
 	width: 942px;
-	height: 260px!important;
+	height: 256px!important;
 	margin: 0px auto 40px auto;
 	top: 1240px;
 	overflow: hidden;
@@ -1386,18 +1372,6 @@ body input:checked ~ div .footnote {
     }
 }
 
-
-.item_section_contest {
-	display: none;
-	position: relative;
-	width: 100%;
-	height: 100px; /* Dummy value */
-	margin: 0px auto 0px auto;
-	top: 100%;
-	overflow: hidden;
-	background: #292929;
-}
-
 .item_section_intro {
 	display: none;
 	position: relative;
@@ -1421,13 +1395,14 @@ body input:checked ~ div .footnote {
 
 .section__col {
     width: 460px;
-	height: 260px;
+	height: 254px;
     margin: 0;
 	padding:0;
 	float: left;
 	background-color: #FFF;
 	overflow: hidden;
 	position: relative;
+	border: 2px #ff2100 solid;
 }
 
 .section__col:last-child{
@@ -1561,11 +1536,13 @@ body input:checked ~ div .footnote {
 	}
 	.section__col:first-child {
         width: 460px;
-		height: 260px;
+		height: 254px;
+		border-right: 0;
     }
     .section__col:last-child {
         width: 480px;
-		height: 260px;
+		height: 254px;
+		border-left: 0;
     }
 }
 @media all and (max-width: 1100px) {
@@ -1590,19 +1567,28 @@ body input:checked ~ div .footnote {
 		width: 250px;
 	}
 	.item_section {
-		width: 460px;
+		width: 455px;
 		height: 500px!important;
 	}
 	.section__col:first-child {
-        width: 460px;
+        width: 453px;
 		height: 260px;
+		border-right: 2px #ff2100 solid;
+		border-bottom: 0;
     }
     .section__col:last-child {
-        width: 460px;
-		height: 240px;
+        width: 453px;
+		height: 238px;
+		border-top: 0;
+		border-left: 2px #ff2100 solid;
+		padding: 30px 20px 0 20px;
     }
 	.main-header {
 		font-size: 25px;
+	}
+	.main-header:after {
+    	top: 20px;
+    	left: 20px;
 	}
 	.speaker{
 		margin: 10px 0 10px 0;
@@ -1632,17 +1618,19 @@ body input:checked ~ div .footnote {
 		display: none;
 	}
 	.item_section {
-		width: 300px;
-		height: 370px!important;
+		width: 298px;
+		height: 368px!important;
 	}
 	.section__col:first-child {
-        width: 300px;
+        width: 296px;
 		height: 170px;
     }
     .section__col:last-child {
-        width: 300px;
-		height: 200px;
+        width: 296px;
+		height: 196px;
 		padding: 20px;
+		border-top: 0;
+		border-left: 2px #ff2100 solid;
     }
 	.imgtalk{
 		width: 300px;
@@ -1718,69 +1706,26 @@ body input:checked ~ div .footnote {
 	position: relative;
 	display: none;
 	width: 100%;
-	height: 180px!important;
+	height: 106px!important;
 	left: 0;
 	top: 1280px;
 	overflow: hidden;
-	background: rgba(255,255,255,0.8);
-	border-top: 3px solid #ff2100 !important;
+	background: rgba(252,252,252,0.8);
 }
 
 .page_footer .copyright {
     position: relative;
 	font-size: 12px;
 	font-weight: 500;
-    bottom: 20px;
     width: 100%;
     text-align: center;
-    color: #ff2100;
-}
-
-.page_footer .footer_title {
-	width: 944px;
-    display: flex;
-	margin: 25px auto 8px auto;
-	overflow: hidden;
-	clear: both;
-}
-.page_footer .title {
-	float: left;
-	width: 460px;
-    color: #292929;
-    display: block;
-    font-size: 20px;
-	font-weight: 600;
-	border-bottom: 1px solid #292929;
-	padding: 0 0 8px 0;
-}
-
-.title:first-child{
-	width: 320px;
-	text-align: left;
-}
-
-.title:last-child{
-	width: 600px;
-	margin-left: 24px;
-	text-align: left;
-}
-
-.page_footer .subscribe_button {
-    background-color: #ff2100;
-    color: #fff;
-    padding: 9px 12px;
-    font-size: 16px;
-	letter-spacing: 1px;
-	text-align: center;
-	width: 170px;
-	margin: 0 0 0 10px;
-	border: 0;
+    color: #000;
 }
 
 .footer_section {
-	width: 944px;
     display: flex;
-	margin: 4px auto 45px auto;
+	left: 0; right: 0;
+	margin: 8px auto 12px auto;
 	overflow: hidden;    
 	clear: both;
 }
@@ -1835,8 +1780,7 @@ a > svg.flickr:hover {
 
 .footer_logos {
 	display: inline-flex;
-	width: 320px;
-	text-align: left;
+	margin: 0 auto;
 	margin-top: 8px;
 }
 
@@ -1875,89 +1819,7 @@ a > svg.flickr:hover {
     color: #D1D1D1;
 }
 
-@media all and (max-width: 1100px) {
-	.page_footer .footer_title {
-		width: 700px;
-		margin: 25px auto 8px auto;
-	}
-	.page_footer .title {
-		font-size: 19px;
-	}
-
-	.title:first-child{
-		width: 240px;
-	}
-
-	.title:last-child{
-		width: 440px;
-		margin-left: 20px;
-	}
-
-	.footer_section {
-		width: 700px;
-	}
-
-	.mail-footer {
-		height: 25px;
-		width: 25px;
-		margin-top: 3px;
-	}
-
-	.footer_logos {
-		width: 240px;
-		margin-top: 5px;
-	}
-
-	.footer_subscribe {
-		width: 440px;
-		margin-left: 19px;
-		margin-top: 5px;
-	}
-
-	.subscribe_button {
-		padding: 9px 4px!important;
-		font-size: 14px!important;
-		width: 120px!important;
-		margin: 0!important;
-	}
-
-	.input_text {
-		width: 285px;
-		height: 25px;
-		font-size: 17px;
-		padding-top: 0px;
-	}
-}
 @media all and (max-width: 800px) {
-	.page_footer {
-		height: 140px;
-	}
-
-	.page_footer .copyright {
-		bottom: 40px;
-	}
-
-	.page_footer .footer_title {
-		width: 480px;
-		margin: 25px auto 8px auto;
-	}
-	.page_footer .title {
-		font-size: 16px;
-	}
-	
-	.title:first-child{
-		width: 180px;
-	}
-
-	.title:last-child{
-		width: 300px;
-		margin-left: 20px;
-	}
-
-	.footer_section {
-		width: 480px;
-	}
-	
 	.facebook,
 	.twitter,
 	.instagram,
@@ -1966,96 +1828,6 @@ a > svg.flickr:hover {
 		width: 25px;
 		height: 25px;
 		margin-left: 1px;
-	}
-
-	.mail-footer {
-		height: 20px;
-		width: 20px;
-		margin-top: 3px;
-	}
-
-	.footer_logos {
-		width: 179px;
-		margin-top: 3px;
-	}
-
-	.footer_subscribe {
-		width: 300px;
-		margin-left: 19px;
-		margin-top: 3px;
-	}
-
-	.subscribe_button {
-		padding: 6px 5px!important;
-		font-size: 12px!important;
-		width: 72px!important;
-	}
-
-	.input_text {
-		width: 187px;
-		height: 20px;
-		font-size: 13px;
-	}
-}
-@media all and (max-width: 550px) {
-	.page_footer {
-		height: 160px!important;
-	}
-
-	.page_footer .copyright {
-		bottom: 10px;
-	}
-
-	.page_footer .footer_title {
-		display: none;
-	}
-	
-	.footer_section {
-		display: block;
-		margin: 20px auto;
-		text-align: center;
-		width: 280px;
-	}
-	
-	.facebook,
-	.twitter,
-	.instagram,
-	.linkedin,
-	.flickr {
-		width: 25px;
-		height: 25px;
-		margin-left: 1px;
-	}
-	
-	.mail-footer {
-		height: 25px;
-		width: 25px;
-		margin-top: 0px;
-	}
-
-	.footer_logos {
-		width: 167px;
-		margin-bottom: 10px;
-		padding-bottom: 10px;
-		border-bottom: 1px solid #292929;
-	}
-
-	.footer_subscribe {
-		width: 300px;
-		margin-top: 5px;
-		margin-left: 0px;
-	}
-
-	.subscribe_button {
-		padding: 6px 6px!important;
-		font-size: 12px!important;
-		width: 72px!important;
-	}
-
-	.input_text {
-		width: 174px;
-		height: 20px;
-		font-size: 14px;
 	}
 }
 /* -------------------------------- */
@@ -2339,7 +2111,7 @@ a > svg.flickr:hover {
 }
 
 .social-feed-element{
-    box-shadow: 0 0 10px 0 rgba(10, 10, 10, 0.2);
+    box-shadow: 0 0 5px 0 rgba(255, 33, 0, 0.2);
     transition: 0.25s;
     background-color: #fff;
     margin: 10px 10px 10px 10px;
@@ -2348,16 +2120,15 @@ a > svg.flickr:hover {
 	-webkit-transform: translateX(0);
 	-moz-transform: translateX(0);
 	transform: translateX(0);
-	border: 1px #000 solid;
+	border: 2px #ff2100 solid;
 }
-
 .social-feed-element:hover{
-    box-shadow: 0 0 20px 0 rgba(10, 10, 10, 0.4);
+    box-shadow: 0 0 15px 0 rgba(255, 33, 0, 0.4);
 }
 
 .social-feed-element .top_news {
 	position: absolute;
-	width: 298px;
+	width: 100%;
 	height: 70px;
 	bottom: 0;
 	padding: 15px 20px 15px 20px;
@@ -2398,17 +2169,18 @@ a > svg.flickr:hover {
 
 .social-feed-element .blurb-body {
 	position: absolute;
+	display: block;
 	top: 0px;
 	height: 230px;
 	width: 300px;
 	padding: 0 20px 0 20px;
 }
 
-.social-feed-element .blurb-body .attachment {
+.social-feed-element .attachment {
 	position: relative;
-	left: -10px;
+	left: -20px;
 	top: 0px;
-	width: 298px;
+	width: 296px;
 	height: 130px;
 	object-fit: cover;
 	object-position: center;
@@ -2424,10 +2196,7 @@ a > svg.flickr:hover {
     height: 100%;
 }
 
-.social-feed-element .blurb-body ~ a {
-	top: 206px;
-	left: 20px;
-	position: absolute;
+.social-feed-element a:nth-child(3) {
 	display: none;
 }
 
@@ -2568,30 +2337,46 @@ a > svg.flickr:hover {
 
 .barra {
 	z-index: 9999;
-	background-color: #ff2100;
+	background-color: #000;
 	position: fixed;
+	visibility: hidden;
 }
 
 .b-top {
 	width: 100%;
-	height: 13px;
+	height: 5px;
 	top: 0;
 }
 
 .b-bottom {
 	width: 100%;
-	height: 13px;
+	height: 5px;
 	bottom: 0;
 }
 
 .b-left {
-	width: 13px;
+	width: 5px;
 	height: 100%;
 	left: 0;
 }
 
 .b-right {
-	width: 13px;
+	width: 5px;
 	height: 100%;
 	right: 0;
 }
+
+/*@media all and (max-width: 450px){
+	.b-top {
+		height: 1px;
+	}
+	.b-bottom {
+		height: 1px;
+	}
+	.b-left {
+		width: 1px;
+	}
+	.b-right {
+		width: 1px;
+	}
+}*/
