--- a/css/speakers/hover.css
+++ b/css/speakers/hover.css
@@ -9,15 +9,14 @@
 .item_section_speakers figure {
 	position: relative;
 	overflow: hidden;
-    margin: 0; /*override tedxistalameda.css*/ 
-    width: 100%;
-    
+    margin: 5; /*override tedxistalameda.css*/   
 }
 
 .item_section_speakers figure img {
     position: relative;
     display: block;
 	width: 100%;
+    opacity: 0.7;
 	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.3s;
 }
@@ -44,9 +43,12 @@
 }
 
 .item_section_speakers figcaption p {
-	padding: 0 20px;
-	color: #aaa;
-	font-weight: 300;
+	padding-top:85%;
+	color: white;
+	font-weight: 500;
+    font-size: 16px;
+    text-align: right;
+    opacity: 0;
 	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
 	transition: opacity 0.3s, transform 0.3s;
 }
@@ -59,13 +61,25 @@
 
 .item_section_speakers figure button {
 	position: absolute;
-	padding: 4px 20px;
-	border: none;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: bold;
-	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+    padding: 4px 20px;
+    top: 71%;
+    left: 50%;
+    
+    background-color: rgba(224,224,224,0.8);
+    border: 1px solid #292929;
+	
+    text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: 500;
+    color: #292929;
+    z-index: 20;
+    
+    opacity: 0;
+    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
 	transition: opacity 0.3s, transform 0.3s;
+    
+	-webkit-transform: translateY(250%) translateX(-50%); /*scale(0.25);*/
+	transform: translateY(250%) translateX(-50%);/* scale(0.25);*/
 }
 
 .item_section_speakers figcaption,
@@ -102,27 +116,22 @@
 }
 
 .item_section_speakers a:hover figcaption p {
-	opacity: 0;
+	opacity: 1;
 }
 
 /* Individual styles */
 
-.demo-1 .item_section_speakers figure button {
-	top: 50%;
-	left: 50%;
-	border: 3px solid #fff;
-	background: transparent;
-	color: #fff;
-	opacity: 0;
-	-webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
-	transform: translateY(-50%) translateX(-50%) scale(0.25);
+.item_section_speakers a:hover figure button{ 
+	opacity: 1;
+	-webkit-transform: translateY(-30%) translateX(-50%); /*scale(1)*/
+	transform: translateY(-30%) translateX(-50%);/* scale(1);*/
 }
 
-.demo-1 .item_section_speakers a:hover figure button{
-	opacity: 1;
-	-webkit-transform: translateY(-50%) translateX(-50%) scale(1);
-	transform: translateY(-50%) translateX(-50%) scale(1);
+.item_section_speakers figure button:hover{ 
+	background-color: rgba(224,224,224,1);
+    border: solid 2.3px;
 }
+
 
 
 /* Media Queries */
