--- a/css/tedxistalameda.css
+++ b/css/tedxistalameda.css
@@ -1305,104 +1305,6 @@ body input:checked ~ div .footnote {
     background: #F3F0E7;
 } 
 
-.blurred_speaker {
-    height: auto;
-    width: inherit;
-	filter: blur(4px);
-	/*transform: filter 0.7s ease-in-out;*/
-}
-
-@keyframes speaker_focus{
-	0% {
-		filter: blur(4px);
-	}
-	100% {
-		filter:blur(0px);
-	}
-}
-
-.speaker_focus{
-     animation: speaker_focus 1 1.0s ease-out forwards;
-	/* animation-duration: 1.0s;
-	 animation-iteration-count: 1;
-	 animation-timing-function: ease-out;
-     animation-direction: normal;
-	 animation-fill-mode: forwards;
-	 animation-delay: 0s;*/
-     -webkit-animation: speaker_focus 1 1.0s ease-out forwards;
-     -moz-animation: speaker_focus 1 1.0s ease-out forwards;
-     -o-animation: speaker_focus 1 1.0s ease-out forwards;
-     -ms-animation: speaker_focus 1 1.0s ease-out forwards;
-    
-}
-
-.module{
-  position: relative;
-  padding: 20px;
-  box-shadow: 0 1px 3px rgba(black, 0.2);
-}
-
-.module:nth-child(3n-1){
-  animation-delay: 0.1s;
-  -webkit-animation-delay: 0.1s;
-  -moz-animation-delay: 0.1s;
-  -o-animation-delay: 0.1s;
-  -ms-animation-delay: 0.1s;
-}
-.module:nth-child(3n){
-  animation-delay: 0.2s;
-  -webkit-animation-delay: 0.2s;
-  -moz-animation-delay: 0.2s;
-  -o-animation-delay: 0.2s;
-  -ms-animation-delay: 0.2s;
-}
-
-.come-in {
-  transform: translateY(30vh);
-  -webkit-transform: translateY(30vh);
-  -moz-transform: translateY(30vh);
-  -o-transform: translateY(30vh);
-  -ms-transform: translateY(30vh);
-
-  animation: come-in 1.0s ease forwards;
-  -webkit-animation: come-in 1.0s ease forwards;
-  -moz-animation: come-in 1.0s ease forwards;
-  -o-animation: come-in 1.0s ease forwards;
-  -ms-animation: come-in 1.0s ease forwards;
-}
-.come-in:nth-child(odd) {
-  animation-duration: 1.0s;
-  -webkit-animation-duration: 1.0s;
-  -moz-animation-duration: 1.0s;
-  -o-animation-duration: 1.0s;
-  -ms-animation-duration: 1.0s;
-}
-
-.already-visible {
-  transform: translateY(0);
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -o-transform: translateY(0);
-  -ms-transform: translateY(0);
-    
-  animation: none;
-  -webkit-animation: none;
-  -moz-animation: none;
-  -o-animation: none;
-  -ms-animation: none;
-}
-
-@keyframes come-in {
-  to { 
-      transform: translateY(0);
-      -webkit-transform: translateY(0);
-      -moz-transform: translateY(0);
-      -o-transform: translateY(0);
-      -ms-transform: translateY(0);
-    }
-}
-
-
 .item_section_contest {
 	display: none;
 	position: relative;
@@ -2537,6 +2439,152 @@ a > svg.flickr:hover {
 	.item_section_news {
 		width: 1282px;
 	}
+}
+
+/*Speakers Section------------------*/
+
+.flex_container {
+    width: 90vw;
+    height: auto;
+    
+    padding: 0;
+    margin: 0 5vw 0 5vw;
+    list-style: none;
+    
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+  
+    -webkit-flex-flow: row wrap;
+    justify-content: center;
+}
+
+.flex_child {
+    margin: auto;
+    background-color: none;
+    width: 300px;
+    height: 300px;
+}
+
+.flex_child img{
+    width: 100%; 
+    /*border-bottom: 5px solid #ff2100;*/
+    
+}
+
+.flex_title {
+    margin: auto;
+    background-color: none;
+    width: 300px;
+    height: 30px;
+    border-bottom: 2px solid #292929/*#e0e0e0*/;
+    margin-bottom: 10px;
+}
+    
+.flex_title h2{
+    font-size: 24px;
+    font-weight: 500;
+    font: Roboto;
+    color: #292929;
+}
+
+.blurred_speaker {
+    height: auto;
+    width: inherit;
+	filter: blur(4px);
+	/*transform: filter 0.7s ease-in-out;*/
+}
+
+@keyframes speaker_focus{
+	0% {
+		filter: blur(4px);
+	}
+	100% {
+		filter:blur(0px);
+	}
+}
+
+.speaker_focus{
+     animation: speaker_focus 1 1.0s ease-out forwards;
+    /* animation-duration: 1.0s;
+     animation-iteration-count: 1;
+     animation-timing-function: ease-out;
+     animation-direction: normal;
+     animation-fill-mode: forwards;
+     animation-delay: 0s;*/
+     -webkit-animation: speaker_focus 1 1.0s ease-out forwards;
+     -moz-animation: speaker_focus 1 1.0s ease-out forwards;
+     -o-animation: speaker_focus 1 1.0s ease-out forwards;
+     -ms-animation: speaker_focus 1 1.0s ease-out forwards;
+    
+}
+
+.module{
+      position: relative;
+      padding: 20px;
+      box-shadow: 0 1px 3px rgba(black, 0.2);
+}
+
+.module:nth-child(3n-1){
+      animation-delay: 0.1s;
+      -webkit-animation-delay: 0.1s;
+      -moz-animation-delay: 0.1s;
+      -o-animation-delay: 0.1s;
+      -ms-animation-delay: 0.1s;
+}
+.module:nth-child(3n){
+      animation-delay: 0.2s;
+      -webkit-animation-delay: 0.2s;
+      -moz-animation-delay: 0.2s;
+      -o-animation-delay: 0.2s;
+      -ms-animation-delay: 0.2s;
+}
+
+.come-in {
+      transform: translateY(30vh);
+      -webkit-transform: translateY(30vh);
+      -moz-transform: translateY(30vh);
+      -o-transform: translateY(30vh);
+      -ms-transform: translateY(30vh);
+
+      animation: come-in 1.0s ease forwards;
+      -webkit-animation: come-in 1.0s ease forwards;
+      -moz-animation: come-in 1.0s ease forwards;
+      -o-animation: come-in 1.0s ease forwards;
+      -ms-animation: come-in 1.0s ease forwards;
+}
+.come-in:nth-child(odd) {
+      animation-duration: 1.0s;
+      -webkit-animation-duration: 1.0s;
+      -moz-animation-duration: 1.0s;
+      -o-animation-duration: 1.0s;
+      -ms-animation-duration: 1.0s;
+}
+
+.already-visible {
+      transform: translateY(0);
+      -webkit-transform: translateY(0);
+      -moz-transform: translateY(0);
+      -o-transform: translateY(0);
+      -ms-transform: translateY(0);
+
+      animation: none;
+      -webkit-animation: none;
+      -moz-animation: none;
+      -o-animation: none;
+      -ms-animation: none;
+}
+
+@keyframes come-in {
+      to{ 
+          transform: translateY(0);
+          -webkit-transform: translateY(0);
+          -moz-transform: translateY(0);
+          -o-transform: translateY(0);
+          -ms-transform: translateY(0);
+        }
 }
 
 /* -------------------------------- */
