--- a/css/speakers/hover.css
+++ b/css/speakers/hover.css
@@ -32,18 +32,22 @@
 }
 
 .item_section_speakers figcaption h2 {
-	margin: 0 0 20px 0;
-	color: #3498db;
+    /*font-size: 24px;*/
+    font-weight: 500;
+    font: Roboto;
+    color: white/*rgba(220,220,220,1)*/;
+   /* text-shadow: -0.7px 0 0.2px rgb(71,72,75), 0 0.7px 0.2px rgb(71,72,75), 0.7px 0 0.2px rgb(71,72,75), 0 -0.7px 0.2px rgb(71,72,75);*/
+    padding: 75.6% 0 0 0;
+	margin: 0;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	font-weight: 300;
-	font-size: 130%;
+	font-size: 150%;
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
 
 .item_section_speakers figcaption p {
-	padding-top:85%;
+	padding-top:3%;
 	color: white;
 	font-weight: 500;
     font-size: 16px;
@@ -62,7 +66,7 @@
 .item_section_speakers figure button {
 	position: absolute;
     padding: 4px 20px;
-    top: 71%;
+    top: 64%;
     left: 50%;
     
     background-color: rgba(224,224,224,0.8);
@@ -83,7 +87,7 @@
 }
 
 .item_section_speakers figcaption,
-.item_section_speakers figcaption h2,
+/*.item_section_speakers figcaption h2,*/ /*uncomment se quiser esconder o nome quando não há hover*/
 .item_section_speakers figcaption p,
 .item_section_speakers figure button {
 	-webkit-backface-visibility: hidden;
@@ -109,7 +113,11 @@
 	opacity: 1;
 }
 
-.item_section_speakers a:hover figcaption h2,
+.item_section_speakers a:hover figcaption h2{
+    -webkit-transform: translateY(2%);
+	transform: translateY(2%);
+}
+
 .item_section_speakers a:hover figcaption p {
 	-webkit-transform: translateY(0);
 	transform: translateY(0);
@@ -123,8 +131,8 @@
 
 .item_section_speakers a:hover figure button{ 
 	opacity: 1;
-	-webkit-transform: translateY(-30%) translateX(-50%); /*scale(1)*/
-	transform: translateY(-30%) translateX(-50%);/* scale(1);*/
+	-webkit-transform: translateY(-10%) translateX(-50%); /*scale(1)*/
+	transform: translateY(-10%) translateX(-50%);/* scale(1);*/
 }
 
 .item_section_speakers figure button:hover{ 
